--- a/Documentos Prueba/prueba.html
+++ b/Documentos Prueba/prueba.html
@@ -71,11 +71,11 @@ Cuerpo:[
             tamaño:"14";
         },
         Texto:{
-            fuente:"Verdana";
-            color:"verde";
-            tamaño:"12";
-            estilo:"negrita";
-        },
+            fuente="Arial";
+            color="azul";
+            tamaño="11";
+            texto="Texto con formato";
+            },
         Parrafo:{
             texto:"Otro párrafo.";
             posicion:"centro";
